2006-07-03 Niklas Knutsson  <nq@altern.org>

	* Add optional upper and lower limit arguments to integrate() for definite integrals
	* Add cross() function
	* Handle powers with multiplication as base when setting prefixes
	* Split powers with units when placing units separately
	* Increment version number

2006-06-21 Niklas Knutsson  <nq@altern.org>

	* Fix parsing of "x!)!"
	* Use Julian year for light-year value

2006-06-20 Niklas Knutsson  <nq@altern.org>

	* Use "Display units separately" also for quantities with multiple terms

2006-06-10 Niklas Knutsson  <nq@altern.org>

	* Add base 3 exponent mode
	* Add "Engineering" display mode

2006-06-06 Niklas Knutsson  <nq@altern.org>

	* Unevaluated arguments were used when checking for numerical arguments in 
	   logn(), which caused log2(16/2) to first be evaluated to ln(16/2)/ln(2).

2006-06-01 Niklas Knutsson  <nq@altern.org>

	* Polishing before 0.9.4 release

2006-05-18 Niklas Knutsson  <nq@altern.org>

	* Fix libqalculate.so unresolved symbols with patch from 
	  Thomas de Grenier de Latour, add GLIB_LIBS to LIBADD

2006-05-09 Niklas Knutsson  <nq@altern.org>

	* Add additional localization options for use in KDE GUI

2006-05-03 Niklas Knutsson  <nq@altern.org>

	* Update API documentation
	* Clean up Unit API
	* More function descriptions
	* tetrahedron(), tetrahedron_sa(), tetrahedron_height(), sqpyramid(), sqpyramid_sa() and sqpyramid_height() functions
	* Do not update the stack until the calculation is finished
	* stack() and register() functions
	* Add true RPN mode to qalc
	* Add "rpn", "stack" and "clear stack" commands, and "lowercase e", "lowercase numbers", "spell out logical", "dot as separator"
	   and "rpn" set command options in qalc
	* Update Swedish translation

2006-04-28 Niklas Knutsson  <nq@altern.org>

	* Update API documentation
	* equation => formula in MathFunction
	* Do less in setFormula() if formula is empty

2006-04-27 Niklas Knutsson  <nq@altern.org>
