@@ -143,3 +143,9 @@ if test x$NOCONFIGURE = x; then
 else
   echo Skipping configure process.
 fi
+
+cd $srcdir/docs/reference
+echo "Generating API docs"
+doxygen Doxyfile
+cd $srcdir
+
