@@ -1,3 +1,12 @@
+2006-08-18 Niklas Knutsson  <nq@altern.org>
+
+	* Generate API docs from autogen.sh
+	* Radius instead of diameter as argument for circumference()
+
+2006-07-21 Niklas Knutsson  <nq@altern.org>
+
+	* Interpret 0x[0-9,a-f] as hexadecimal number (do not require first digit to be 0-9
+
 2006-07-03 Niklas Knutsson  <nq@altern.org>
 
 	* Add optional upper and lower limit arguments to integrate() for definite integrals
